--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <!-- Header -->
 <div class="text-center mx-auto py-5">
     <h1>Normal old game of minesweeper</h1>
-<!--    <div class="container">-->
-<!--        <div class="row">-->
-<!--            <div class="col-6">Col 1</div>-->
-<!--            <div class="col-6">Col 2</div>-->
-<!--        </div>-->
-<!--    </div>-->
+    <!--    <div class="container">-->
+    <!--        <div class="row">-->
+    <!--            <div class="col-6">Col 1</div>-->
+    <!--            <div class="col-6">Col 2</div>-->
+    <!--        </div>-->
+    <!--    </div>-->
 </div>
 
 
@@ -42,12 +42,14 @@
     var ms = $('#minesweeper-container');
     var grid_size = 10; // num of rows, also num of cols
     var grid = [];
-    var num_bombs = 50 - 1;
-    function initGrid() {
-        for (let i=0; i<grid_size; i++) {
+    var num_bombs = 10 - 1;
 
+    let kaboom = false;
+
+    function initGrid() {
+        for (let i = 0; i < grid_size; i++) {
             grid[i] = [];
-            for (let j=0; j<grid_size; j++) {
+            for (let j = 0; j < grid_size; j++) {
                 let text;
                 if (Math.random() < .1 && num_bombs > 0) {
                     // this is bomb
@@ -58,24 +60,37 @@
                 }
             }
         }
+        // set num adjacent bombs
+        setAdjacent();
     }
 
     function drawGame() {
         ms.empty();
-        for (let i=0; i<grid.length; i++) {
+        for (let i = 0; i < grid.length; i++) {
             let row = grid[i];
             let row_el = $('<tr class="grid_row"></tr>');
-            for (let j=0; j<row.length; j++) {
+            for (let j = 0; j < row.length; j++) {
                 let tile_el;
-                let col_el = $('<td class="grid_col" data-i="'+i+'" data-j="'+j+'"></td>');
+                let col_el = $('<td class="grid_col" data-i="' + i + '" data-j="' + j + '"></td>');
                 if (!row[j].is_revealed) {
-                    tile_el = $('<td class="tile tile_hidden"></td>');
-                } else if (row[j].is_flagged) {
-                    tile_el = $('<td class="tile tile_flag"></td>');
+                    if (row[j].is_flagged) {
+                        tile_el = $('<td class="tile tile_flag"><img width="35" src="img/flag.png" /></td>');
+                    } else {
+                        tile_el = $('<td class="tile tile_hidden"></td>');
+                    }
                 } else if (row[j].is_bomb) {
                     tile_el = $('<td class="tile tile_bomb">b</td>');
                 } else {
-                    tile_el = $('<td class="tile tile_revealed"></td>');
+                    let num_adj = grid[i][j].adjacent_bombs;
+                    let col_class = '';
+                    if (num_adj == 1) {
+                        col_class = 'text_one';
+                    } else if (num_adj == 2) {
+                        col_class = 'text_two';
+                    } else if (num_adj >= 3) {
+                        col_class = 'text_three';
+                    }
+                    tile_el = $('<td class="tile tile_revealed '+col_class+'">'+ (num_adj > 0 ? num_adj : '') +'</td>');
                 }
 
                 col_el.append(tile_el)
@@ -83,28 +98,97 @@
             }
             ms.append(row_el);
         }
+
+        initClickers();
+    }
+
+    function setAdjacent() {
+        for (let i = 0; i < grid.length; i++) {
+            for (let j = 0; j < grid[i].length; j++) {
+                for (let check_i = i - 1; check_i < i + 2; check_i++) {
+                    for (let check_j = j - 1; check_j < j + 2; check_j++) {
+                        if (check_i >= 0 && check_j >= 0 && check_i < grid_size && check_j < grid_size && !(check_i == i && check_j == j)) {
+                            let square = grid[check_i][check_j];
+                            if (square.is_bomb) {
+                                grid[i][j].adjacent_bombs++;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    function setAllRevealed() {
+        for (let i = 0; i < grid.length; i++) {
+            for (let j = 0; j < grid[i].length; j++) {
+                grid[i][j].is_revealed = true;
+            }
+        }
+        drawGame();
     }
 
     function initClickers() {
         $('.grid_col').on('click', function () {
             let i = $(this).data('i');
             let j = $(this).data('j');
-            console.log(i + ',' + j);;
 
             let square = grid[i][j];
-            console.log(square);
+
+            if (square.is_bomb) {
+                kaboom = true;
+                setAllRevealed();
+                return;
+            }
             square.is_revealed = true;
 
+            if (square.adjacent_bombs == 0) {
+                revealZeros(i, j);
+
+                drawGame();
+                return;
+            }
+
             drawGame();
-            initClickers();
+        });
+
+        $('.grid_col').on('contextmenu', function (e) {
+            e.preventDefault();
+
+            let i = $(this).data('i');
+            let j = $(this).data('j');
+            console.log(i + ',' + j);
+
+            let square = grid[i][j];
+            if (!square.is_revealed) {
+                square.is_flagged = !square.is_flagged;
+
+                drawGame();
+            }
         });
 
     }
 
-    $(document).ready(function() {
+    // inefficient
+    function revealZeros(i, j) {
+        // console.log('revealZeros: ' + i +  ", " + j);
+        for (let reveal_i = i - 1; reveal_i < i + 2; reveal_i++) {
+            for (let reveal_j = j - 1; reveal_j < j + 2; reveal_j++) {
+                if (reveal_i >= 0 && reveal_j >= 0 && reveal_i < grid_size && reveal_j < grid_size && !(reveal_i == i && reveal_j == j)) {
+                    let square = grid[reveal_i][reveal_j];
+                    let was_revealed = square.is_revealed;
+                    square.is_revealed = true;
+                    if (square.adjacent_bombs == 0 && was_revealed === false) {
+                        revealZeros(reveal_i, reveal_j);
+                    }
+                }
+            }
+        }
+    }
+
+    $(document).ready(function () {
         initGrid();
         drawGame();
-        initClickers();
     });
 
 
